--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
         <nav>
             <h3 class="text-center">Capabilities</h3>
             <ul>
-              <li class"test-center">html</li>
-              <li class"test-center">css</li>
-              <li class"test-center">javascript</li>
-              <li class"test-center">photoshop</li>
-              <li class"test-center">english</li>
-              <li class"test-center">...other</li>
+              <li class"test-center"><p>html</p></li>
+              <li class"test-center"><p>css</p></li>
+              <li class"test-center"><p>javascript</p></li>
+              <li class"test-center"><p>photoshop</p></li>
+              <li class"test-center"><p>english</p></li>
+              <li class"test-center"><p>...other</p></li>
             </ul>
         </nav>
     </div>
