--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                               method="POST">
                             <label for="contact-me">Put your name here: <input type="text" name="name"></label>
                             <label for="contact-me">Reason for contacting me: <input type="text" name="contact-reason"></label>
-                            <label for="contact-me">Message: <input type="email" name="_replyto"></label>
+                            <label for="contact-me">Your email: <input type="email" name="_replyto"></label>
                             <input type="submit" value="Send">
                         </form>
                                 
