--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <!-- done or at least found to be used by me -->
         <link id="pagestyle" rel="stylesheet" type="text/css" href="css/index.css">
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             function swapStyleSheet(sheet){
 	        document.getElementById('pagestyle').setAttribute('href', sheet);
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <a href="#" class="navbar-left">
-            <img style="display: float; width:30px;"  src="img/me/ls.png" alt="logo">
+            <img id="logo"  src="img/me/ls.png" alt="logo">
         </a>
         <h1 class="headgreeting">Welcome to my website</h1>
         <h1 class="headgreeting">It is great seeing you here</h1>
