--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <a href="#" class="navbar-left">
-            <img id="logo"  src="img/me/ls.png" alt="logo">
+            <img class="logo"  src="img/me/ls.png" alt="logo">
         </a>
         <h1 class="headgreeting">Welcome to my website</h1>
         <h1 class="headgreeting">It is great seeing you here</h1>
