--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         
         <!-- done or at least found to be used by me -->
         <link id="pagestyle" rel="stylesheet" type="text/css" href="css/index.css">
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>\
+        <script type="text/javascript"> function swapStyleSheet(sheet){
+	        document.getElementById('pagestyle').setAttribute('href', sheet);
+            }</script>
         
 </head>
 <body>
