--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.csss"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         
         <!-- done or at least found to be used by me -->
         <link id="pagestyle" rel="stylesheet" type="text/css" href="css/index.css">
