--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <!-- done or at least found to be used by me -->
         <link id="pagestyle" rel="stylesheet" type="text/css" href="css/index.css">
-        <script type="text/javascript" src="js/index.js"></script>\
+        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript"> function swapStyleSheet(sheet){
 	        document.getElementById('pagestyle').setAttribute('href', sheet);
             }</script>
@@ -127,12 +127,12 @@
             <h3 class="text-center">Capabilities</h3>
             <ul>
                 <p>
-                  <li class"test-center">html</p></li>
-                  <li class"test-center"><p>css</p></li>
-                  <li class"test-center"><p>javascript</p></li>
-                  <li class"test-center"><p>photoshop</p></li>
-                  <li class"test-center"><p>english</p></li>
-                  <li class"test-center"><p>...other</li>
+                  <li class"test-center">html</li>
+                  <li class"test-center">css</li>
+                  <li class"test-center">javascript</li>
+                  <li class"test-center">photoshop</li>
+                  <li class"test-center">english</li>
+                  <li class"test-center">...other</li>
                 </p>
             </ul>
         </nav>
