--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div>
         <h1 class="text-center">Oleksandra    Seletska</h1></div>
     <div>
-        <img class="displayed" srcset="img/me/me.png 1024w, 
+        <img class="displayed img-circle img-thumbnail" srcset="img/me/me.png 1024w, 
         img/me/me-s.jpg 320w" 
         sizes="33.3vw,
           100vw"
