--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@
                     <div id="contactme">
                             <form action="https://formspree.io/seletska@gmail.com"
                                   method="POST">
-                                <label for="contact-me"><i class="fa fa-pencil" aria-hidden="true"></i>&nbsp; Put your name here: <input type="text" name="name" required></label>
-                                <label for="contact-me"><i class="fa fa-suitcase" aria-hidden="true"></i>&nbsp; Reason for contacting me: <input type="text" name="contact-reason" required></label>
-                                <label for="contact-me"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp; Your email: <input type="email" name="_replyto" required></label>
+                                <label for="contact-me"><i class="fa fa-pencil" aria-hidden="true"></i>&nbsp; Put your name here: <br><input type="text" name="name" required></label>
+                                
+                                <label for="contact-me"><i class="fa fa-suitcase" aria-hidden="true"></i>&nbsp; Reason for contacting me: <br><input type="text" name="contact-reason" required></label>
+                                 <br>
+                                <label for="contact-me"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp; Your email: <br><input type="email" name="_replyto" required></label>
+                                 <br>
                                 <label for="contact-me"><input type="submit" value="Send"></label>
                             </form>
                     </div>
